# aidb-locator

./: .gitignore  LICENSE  README.md  README_en.md  pyproject.toml
docs/superpowers/plans/: 2026-04-03-aidb-locator-plan.md  2026-04-28-aidb-locator-ui-plan.md
docs/superpowers/specs/: 2026-04-03-aidb-locator-design.md  2026-04-28-aidb-locator-ui-design.md
src/aidb_locator/: __init__.py  adb.py  cli.py  commands.py  mcp_server.py  models.py  protocol.py
src/aidb_locator/ui/: __init__.py  deps.py  errors.py  server.py
src/aidb_locator/ui/api/: __init__.py  capture.py  devices.py  edit.py  snapshot.py
src/aidb_locator/ui/static/: app.js  findViewAt.js  index.html  snapshot_template.html  style.css
tests/: test_adb.py  test_commands.py  test_models.py  test_protocol.py
tests/ui/: MANUAL.md  conftest.py  test_capture.py  test_devices.py  test_edit.py  test_errors.py  test_findViewAt.mjs  test_snapshot.py
