[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidb-locator"
version = "0.1.0"
description = "AI-powered Android Debug Bridge — CLI & MCP Server for Android UI inspection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "dendi" },
]
keywords = ["android", "adb", "mcp", "ui-inspection", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.0",
    "mcp>=1.0",
]

[project.scripts]
aidb = "aidb_locator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aidb_locator"]
